--- a/content/2021-05-18-skills.md
+++ b/content/2021-05-18-skills.md
@@ -1,6 +1,5 @@
 +++
-title = "Skills to Acquire and Technologies to Learn"
-slug = "skills-and-tech"
+title = "Skills to Learn"
 [taxonomies]
 categories = ["misc"]
 +++
