--- a/content/2021-05-18-skills.md
+++ b/content/2021-05-18-skills.md
@@ -7,12 +7,15 @@ categories = ["misc"]
 I'm starting here a list of technologies that I'm interested in.
 It's essentially a slightly less cluttered "Read it Later" list.
 
+- Containers
+  - Learn more about [OCI Runtimes](https://github.com/opencontainers/runtime-spec/blob/master/spec.md)
+  - [k8s](https://kubernetes.io/docs/tutorials/kubernetes-basics/)
 - Distributed Systems and Protocols
-    - [TCP in Depth](https://www.youtube.com/watch?v=bzja9fQWzdA)
-    - BPF [1](https://github.com/iovisor/bcc)
-    - Paxos [1](https://lamport.azurewebsites.net/pubs/paxos-simple.pdf)[2](https://www.youtube.com/watch?v=SRsK-ZXTeZ0)
-    - [Raft](https://raft.github.io/)
-    - [OAuth and OIDC](https://www.youtube.com/watch?v=GyCL8AJUhww)
-    - [Universal Composability](https://eprint.iacr.org/2016/046.pdf)
-    - [HMQV](https://eprint.iacr.org/2005/176.pdf)
-    - [Proof of Stake Protocols](https://www.youtube.com/watch?v=fBKCbhX-dXI)
+  - [TCP in Depth](https://www.youtube.com/watch?v=bzja9fQWzdA)
+  - BPF [1](https://github.com/iovisor/bcc)
+  - Paxos [1](https://lamport.azurewebsites.net/pubs/paxos-simple.pdf)[2](https://www.youtube.com/watch?v=SRsK-ZXTeZ0)
+  - [Raft](https://raft.github.io/)
+  - [OAuth and OIDC](https://www.youtube.com/watch?v=GyCL8AJUhww)
+  - [Universal Composability](https://eprint.iacr.org/2016/046.pdf)
+  - [HMQV](https://eprint.iacr.org/2005/176.pdf)
+  - [Proof of Stake Protocols](https://www.youtube.com/watch?v=fBKCbhX-dXI)
